fixed: event calendar gap from navbar

--- a/src/screens/Event Screen/style.css
+++ b/src/screens/Event Screen/style.css
@@ -5,6 +5,10 @@
 }
 .react-calendar {
   width: 92% !important;
+  border: 1px solid;
+}
+.react-calendar__viewContainer {
+  margin: -1px;
 }
 .table-responsive-sm {
   overflow: auto;
